# hello_world

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  conanfile.txt  default.nix  main.cpp  shell.nix  vm.json
src/: CMakeLists.txt  main.cpp
